--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,13 +14,14 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity android:name="ca.regina.barcodescanner.MainActivity"
-            android:label="@string/title_activity_main">
+            android:label="@string/app_name">
         	<intent-filter>
         	    <action android:name="android.intent.action.MAIN" />
         	    <category android:name="android.intent.category.LAUNCHER" />
         	</intent-filter>
         </activity>
         <activity android:name="ca.regina.barcodescanner.WorkOrdersActivity"
+            android:screenOrientation="landscape"
             android:label="@string/title_activity_work_orders" />
     </application>
 
